# tts-piper

./: .envrc  .gitignore  Makefile  README.md  build.sh  meta.json  pyproject.toml  run.sh  setup.sh
.github/workflows/: deploy.yml
examples/: say.py  to_speech.py
src/tts_piper/: __init__.py  __main__.py  tts.py
